# aubiter

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  vite.config.ts
src/routes/: +page.svelte
wasm/gravity/: Cargo.toml  README.md  modulize.js
wasm/gravity/src/: lib.rs  universe.rs  vector3.rs
