[package]
name = "gravity"
version = "0.1.0"
edition = "2021"
description = "A gravity simulation for the web"
repository = "https://github.com/matsixfive/aubiter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# deps
[dependencies]
vector3 = "1.1.4"
wasm-bindgen = "0.2.86"
