[package]
name = "gravity"
version = "0.1.0"
edition = "2021"
description = "A gravity simulation for the web"
repository = "https://github.com/matsixfive/aubiter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = 0
debug = true


# deps
[dependencies]
wasm-bindgen = "0.2.86"
